@@ -33,7 +33,7 @@
     </parent>
 
     <properties>
-        <ignite.version>1.0.0-RC3</ignite.version>
+        <ignite.version>1.0.0</ignite.version>
         <ignite.edition>fabric</ignite.edition>
         <hadoop.version>2.4.1</hadoop.version>
         <spring.version>4.1.0.RELEASE</spring.version>
@@ -123,20 +123,16 @@
         <module>modules/extdata/p2p</module>
         <module>modules/extdata/uri</module>
         <module>modules/clients</module>
-        <module>examples</module>
         <module>modules/tools</module>
         <module>modules/spring</module>
-        <module>modules/hibernate</module>
         <module>modules/web</module>
         <module>modules/aop</module>
         <module>modules/urideploy</module>
         <module>modules/indexing</module>
-        <module>modules/geospatial</module>
         <module>modules/ssh</module>
         <module>modules/rest-http</module>
         <module>modules/jta</module>
         <module>modules/aws</module>
-        <module>modules/schedule</module>
         <module>modules/log4j</module>
         <module>modules/slf4j</module>
         <module>modules/jcl</module>
@@ -361,6 +357,7 @@
                             <outputDirectory>${basedir}</outputDirectory>
                             <finalName>libs</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
+                            <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                         </configuration>
                     </execution>
 
@@ -377,6 +374,7 @@
                             <outputDirectory>${basedir}/libs</outputDirectory>
                             <finalName>optional</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
+                            <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                         </configuration>
                     </execution>
 
@@ -494,6 +492,26 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.4</version>
+                <configuration>
+                    <rules>
+                        <requireJavaVersion>
+                            <version>[1.7,)</version>
+                        </requireJavaVersion>
+                    </rules>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -557,13 +575,12 @@
                                         <exclude>**/keystore/*.jks</exclude><!--bin-files-->
                                         <exclude>**/keystore/*.pem</exclude><!--auto generated files-->
                                         <exclude>**/keystore/*.pfx</exclude><!--bin-files-->
+                                        <exclude>**/*.sql</exclude><!--sql files -->
                                         <!--special excludes-->
                                         <exclude>DEVNOTES.txt</exclude>
-                                        <exclude>src/main/java/com/romix/scala/**</exclude><!--Apache License, Version 2.0 (Copyright)-->
-                                        <exclude>src/main/java/org/apache/ignite/internal/util/offheap/unsafe/GridOffHeapSnapTreeMap.java</exclude><!--Stanford University license-->
-                                        <exclude>src/main/java/org/apache/ignite/internal/util/snaptree/*.java</exclude><!--Stanford University license-->
-                                        <exclude>src/main/java/org/pcollections/**</exclude><!--MIT license-->
-                                        <exclude>src/main/java/org/jdk8/backport/*.java</exclude>
+                                        <exclude>src/main/java/org/apache/ignite/internal/util/offheap/unsafe/GridOffHeapSnapTreeMap.java</exclude><!--BSD license-->
+                                        <exclude>src/main/java/org/apache/ignite/internal/util/snaptree/*.java</exclude><!--BSD license-->
+                                        <exclude>src/main/java/org/jsr166/*.java</exclude>
                                         <exclude>src/test/java/org/apache/ignite/p2p/p2p.properties</exclude><!--test depends on file content-->
                                         <exclude>src/test/resources/log/ignite.log.tst</exclude><!--test resource-->
                                         <exclude>src/test/java/org/apache/ignite/spi/deployment/uri/META-INF/ignite.incorrefs</exclude><!--test resource-->
@@ -573,8 +590,6 @@
                                         <exclude>src/main/java/META-INF/services/javax.cache.spi.CachingProvider</exclude><!--cannot be changed-->
                                         <exclude>src/main/java/org/jetbrains/annotations/*.java</exclude><!--copyright-->
                                         <exclude>src/main/resources/META-INF/services/org.apache.hadoop.mapreduce.protocol.ClientProtocolProvider</exclude><!--cannot be changed-->
-                                        <exclude>modules/winservice/IgniteService.sln</exclude>
-                                        <exclude>modules/winservice/IgniteService/IgniteService.csproj</exclude>
                                         <!--shmem-->
                                         <exclude>ipc/shmem/**/Makefile.in</exclude><!--auto generated files-->
                                         <exclude>ipc/shmem/**/Makefile</exclude><!--auto generated files-->
@@ -704,7 +719,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.9.1</version>
+                        <version>2.10.1</version>
                         <executions>
                             <execution>
                                 <id>module-javadoc</id>
@@ -731,7 +746,7 @@
                                     <use>true</use>
                                     <author>false</author>
                                     <version>false</version>
-                                    <source>1.7</source>
+                                    <additionalparam>${javadoc.opts}</additionalparam>
                                     <links>
                                         <link>http://docs.oracle.com/javase/7/docs/api/</link>
                                         <link>http://hadoop.apache.org/docs/current/api/</link>
@@ -772,7 +787,7 @@
                                         </group>
                                         <group>
                                             <title>Streaming APIs</title>
-                                            <packages>org.apache.ignite.streamer:org.apache.ignite.streamer.router:org.apache.ignite.streamer.window:org.apache.ignite.streamer.index:org.apache.ignite.streamer.index.hash:org.apache.ignite.streamer.index.tree</packages>
+                                            <packages>org.apache.ignite.streamer:org.apache.ignite.streamer.router:org.apache.ignite.streamer.window:org.apache.ignite.streamer.index:org.apache.ignite.streamer.index.hash:org.apache.ignite.streamer.index.tree:org.apache.ignite.stream</packages>
                                         </group>
                                         <group>
                                             <title>Security APIs</title>
@@ -925,13 +940,13 @@
                                     <use>true</use>
                                     <author>false</author>
                                     <version>false</version>
-                                    <source>1.7</source>
+                                    <additionalparam>${javadoc.opts}</additionalparam>
                                     <links>
                                         <link>http://docs.oracle.com/javase/7/docs/api/</link>
                                         <link>http://hadoop.apache.org/docs/current/api/</link>
                                     </links>
                                     <stylesheetfile>${basedir}/assembly/docfiles/javadoc.css</stylesheetfile>
-                                    <excludePackageNames>com.*:org.jetbrains.*:org.pcollections:*.jdk8:*.tests:*.tools:*.typedef:*.examples:*.client:*.kernal:*.internal:*.util:*.dr:*.spi.discovery.tcp.messages:*.spi.discovery.tcp.internal:*.spi.deployment.uri.scanners:*.spi.deployment.uri.tasks:*.spi.indexing.h2.opt:org.apache.ignite.portables:org.apache.ignite.yardstick:org.apache.ignite.schema.*:org.apache.ignite.codegen</excludePackageNames>
+                                    <excludePackageNames>com.*:org.jetbrains.*:org.jsr166:*.jdk8:*.tests:*.tools:*.typedef:*.examples:*.client:*.kernal:*.internal:*.util:*.dr:*.spi.discovery.tcp.messages:*.spi.discovery.tcp.internal:*.spi.deployment.uri.scanners:*.spi.deployment.uri.tasks:*.spi.indexing.h2.opt:org.apache.ignite.portables:org.apache.ignite.yardstick:org.apache.ignite.schema.*:org.apache.ignite.codegen</excludePackageNames>
                                     <groups>
                                         <group>
                                             <title>Common Grid APIs</title>
@@ -967,7 +982,7 @@
                                         </group>
                                         <group>
                                             <title>Streaming APIs</title>
-                                            <packages>org.apache.ignite.streamer:org.apache.ignite.streamer.router:org.apache.ignite.streamer.window:org.apache.ignite.streamer.index:org.apache.ignite.streamer.index.hash:org.apache.ignite.streamer.index.tree</packages>
+                                            <packages>org.apache.ignite.streamer:org.apache.ignite.streamer.router:org.apache.ignite.streamer.window:org.apache.ignite.streamer.index:org.apache.ignite.streamer.index.hash:org.apache.ignite.streamer.index.tree:org.apache.ignite.stream</packages>
                                         </group>
                                         <group>
                                             <title>Security APIs</title>
@@ -1345,67 +1360,40 @@
         </profile>
 
         <profile>
-            <id>opt-clns-prop</id>
+            <id>java8</id>
+            <activation>
+                <jdk>[1.8,)</jdk>
+            </activation>
+            <properties>
+                <javadoc.opts>-Xdoclint:none</javadoc.opts>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.7</version>
-                        <inherited>false</inherited>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.apache.ignite</groupId>
-                                <artifactId>ignite-tools</artifactId>
-                                <version>${ignite.version}</version>
-                            </dependency>
-                        </dependencies>
-                        <executions>
-                            <execution>
-                                <id>optimized-classnames-generation</id>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <phase>process-classes</phase>
-                                <configuration>
-                                    <target>
-                                        <java
-                                                classname="org.apache.ignite.tools.marshaller.optimized.OptimizedClassNamesGenerator"
-                                                fork="true"
-                                                failonerror="true"
-                                                maxmemory="1g">
-                                            <classpath>
-                                                <path location="${project.basedir}/modules/core/target/classes"/>
-                                                <path location="${project.basedir}/modules/aop/target/classes"/>
-                                                <path location="${project.basedir}/modules/aws/target/classes"/>
-                                                <path location="${project.basedir}/modules/email/target/classes"/>
-                                                <path location="${project.basedir}/modules/hadoop/target/classes"/>
-                                                <path location="${project.basedir}/modules/hibernate/target/classes"/>
-                                                <path location="${project.basedir}/modules/indexing/target/classes"/>
-                                                <path location="${project.basedir}/modules/jcl/target/classes"/>
-                                                <path location="${project.basedir}/modules/jta/target/classes"/>
-                                                <path location="${project.basedir}/modules/log4j/target/classes"/>
-                                                <path location="${project.basedir}/modules/rest-http/target/classes"/>
-                                                <path location="${project.basedir}/modules/schedule/target/classes"/>
-                                                <path location="${project.basedir}/modules/slf4j/target/classes"/>
-                                                <path location="${project.basedir}/modules/spring/target/classes"/>
-                                                <path location="${project.basedir}/modules/ssh/target/classes"/>
-                                                <path location="${project.basedir}/modules/urideploy/target/classes"/>
-                                                <path location="${project.basedir}/modules/web/target/classes"/>
-                                                <path location="${project.basedir}/modules/scalar/target/classes"/>
-                                                <path location="${project.basedir}/modules/visor-console/target/classes"/>
-                                                <path refid="maven.plugin.classpath"/>
-                                            </classpath>
-                                            <arg value="${project.basedir}/modules/core/src/main/java"/>
-                                            <jvmarg value="-XX:MaxPermSize=1g"/>
-                                        </java>
-                                    </target>
-                                </configuration>
-                            </execution>
-                        </executions>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>1.8</source>
+                            <target>1.8</target>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+
+        <profile>
+            <id>lgpl</id>
+            <modules>
+                <module>modules/hibernate</module>
+                <module>modules/geospatial</module>
+                <module>modules/schedule</module>
+            </modules>
+        </profile>
+
+        <profile>
+            <id>examples</id>
+            <modules>
+                <module>examples</module>
+            </modules>
         </profile>
     </profiles>
 </project>
